Fresh index.html

--- a/index.html
+++ b/index.html
@@ -1,132 +1,125 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Yasin Dovletov | Resume</title>
-		<link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="main.css"> 
-	</head>
+  <head>
+    <link rel="stylesheet" href="https://jekyll-cv.stavrospanakakis.com/assets/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico">
+    <title>Yasin Dovletov | CV</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1 class="title">Yasin Dovletov</h1>
+        <input type="checkbox" id="switch" name="mode" class="toggle-dark">
+        <label for="switch">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="var(--fg-color)" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-moon" id="moon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="var(--fg-color-dark)" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-moon">
+              <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+            </svg>
+          </svg>
+        </label>
+      </div>
+      <div class="container-block">
+        <div class="sidebar">
+          <section class="contact">
+            <div class="title">Contact</div>
+            <div class="contact-item">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail">
+                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+                <polyline points="22,6 12,13 2,6"></polyline>
+              </svg>
+              <a href="mailto:doloreshaze145@gmail.com">doloreshaze145@gmail.com</a>
+            </div>
+            <div class="contact-item">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github">
+                <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+              </svg>
+              <a href="https://github.com/johndoe"> ad3us </a>
+            </div>
+          </section>
+          <section class="languages">
+            <div class="title">Languages</div>
+            <div class="idiom">English</div>
+            <div class="idiom">Russian</div>
+            <div class="idiom">Chinese</div>
+            <div class="idiom">Turkmen</div>            
+          </section>
+          <section class="education">
+            <div class="title">Education</div>
+            <div class="education-item">
+              <div class="degree">Information Technologies</div>
+              <div class="university">Xidian University</div>
+              <div class="time">2024-</div>
+            </div>
+          </section>
+          <section class="skills">
+            <div class="title">Backend skills</div>
+            <div class="skill">Python</div>
+            <div class="title">Frontend skills</div>
+            <div class="skill">HTML & CSS</div>
+            <div class="skill">Javascript</div>            
+            <div class="title">Graphic Design</div>
+            <div class="skill">Adobe Photoshop</div>
+            <div class="skill">CorelDRAW</div>            
+            <div class="title">3D Modeling</div>
+            <div class="skill">Autodesk 3D's Max</div>
+            <div class="skill">Autodesk AutoCAD</div>  
 
-	<body>
-		<div class="container">
-			<div class="header">
-				<div class="full-name"> 
-					<span class="first-name">Yasin</span> <span class="last-name">Dovletov</span> 
-				</div>
-				<br>
-				<div class="contact-info"> 
-					<span class="email">Email: 
-					</span> 
-					<span class="email-val">doloreshaze145@gmail.com</span> 
-					<span class="separator"></span> 
-					<span class="phone">Phone: </span> 
-					<span class="phone-val">+86 156 6708 1651</span> </div>
-				<div class="about"> 
-					<span class="position">Graphics Designer & Beginner Front-End Developer</span>
-					<br> 
-					<span class="desc">
-			        I am a graphic designer with more than 5 years of experience working on Adobe Photoshop, CorelDRAW, Autodesk AutoCAD, Autodesk 3Ds MAX. I'm motivated, result-focused and seeking a successful job with opportunity to grow. </span> 
-  				</div>
-			</div>
-			<div class="details">
-				<div class="section">
-					<div class="section__title">Experience</div>
-					<div class="section__list">
-						<div class="section__list-item">
-							<div class="left">
-								<div class="name">"Telekeciler Mekdebi" Education Center</div>
-								<div class="addr">Turkmenistan, Mary district, Bayramaly city, Soltan Sanjar street.</div>
-								<div class="duration">Nov 2023 - Aug 2024</div>
-							</div>
-							<div class="right">
-								<div class="name">Administrator & Teacher</div>
-								<div class="desc"><span>Teaching "Scratch"</span>, <br><span>"Front-end" developing basics</span>, <br><span>Graphic Design basics</span></div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="section">
-					<div class="section__title">Education</div>
-					<div class="section__list">
-						<div class="section__list-item">
-							<div class="left">
-								<div class="name">Xidian University</div>
-								<div class="addr">China, Shaanxi province, Xi'An city</div>
-								<div class="duration">Sep 2024 - to these days</div>
-							</div>
-							<div class="right">
-								<div class="name">Student</div>
-								<div class="desc">Faculty of Information Technologies</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="section">
-					<div class="section__title">Projects</div>
-					<div class="section__list">
-						<div class="section__list-item">
-							<div class="name"><a href="https://ad3us.github.io/quoter/">Quoter</a></div>
-							<div class="text">Simple project in Russian language that shows quotes of great people(writers, poets, politicians, etc)
-								</a> 
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="section">
-					<div class="section__title">Skills</div>
-					<div class="skills">
-
-					<div class="skills__item">
-						<div class="left">
-								<div class="name"> HTML </div>
-						</div>
-					</div>
-					</div>
-					<div class="skills__item">
-						<div class="left">
-							<div class="name"> CSS </div>
-						</div>
-					</div>
-					<div class="skills__item">
-						<div class="left">
-							<div class="name"> Javascript </div>
-						</div>
-					</div>
-					<div class="skills__item">
-						<div class="left">
-							<div class="name"> Adobe Photoshop </div>
-						</div>
-					</div>
-					<div class="skills__item">
-						<div class="left">
-							<div class="name"> CorelDRAW </div>
-						</div>
-					</div>
-					<div class="skills__item">
-						<div class="left">
-							<div class="name"> Autodesk AutoCAD </div>
-						</div>
-					</div>
-					<div class="skills__item">
-						<div class="left">
-							<div class="name"> Autodesk 3Ds MAX </div>
-						</div>
-					</div>
-					<div class="skills__item">
-						<div class="left">
-							<div class="name"> Python </div>
-						</div>
-					</div>
-				</div>
-				<div class="section">
-					<div class="section__title"> Interests </div>
-					<div class="section__list">
-						<div class="section__list-item"> Programming, Reading </div>
-					</div>
-				</div>
-			</div>
-		</div>
-		</div>
-	</body>
+          </section>
+          <section class="fork">
+            <div>
+              <span></span>
+            </div>
+          </section>
+          <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
+        </div>
+        <div class="main">
+          <section class="career-profile">
+            <h2 class="title">About me</h2>
+            <div class="details">
+            	<p>I'm motivated, result-focused and seeking a successful job with opportunity to grow.</p> 
+            </div>
+          </section>
+          <section class="experiance">
+            <h2 class="title">Experience</h2>
+            <div class="experience-item">
+              <div class="role"> Administrator </div>
+              <div class="company"> "Bilim Guzeri" EC <span class="time">2023-2024</span>
+              </div>
+              <div class="details">I worked with contracts, registered students and was engaged in administration.</div>
+              <p class="technologies">Technologies Used: Microsoft Word, Excel, Powerpoint</p>
+            </div>
+            <div class="experience-item">
+              <div class="role"> Teacher </div>
+              <div class="company"> "Bilim Guzeri" EC <span class="time">2023-2024</span>
+              </div>
+              <div class="details">I taught Scratch visual programming lessons, Frontend development basics, Graphic Design basics, as well as Microsoft Word, Excel, Powerpoint.</div>
+              <p class="technologies">Technologies Used: Scratch, CorelDRAW, Adobe Photoshop, Microsoft Word, Excel, Powerpoint, Scratch</p>
+            </div>            
+          </section>
+          <section class="projects">
+            <h2 class="title">Projects</h2>
+            <div class="project">
+              <span>
+                <a class="project-link" href="https://ad3us.github.io/quoter/"> Quoter </a>
+              </span>
+              <span class="details">- Quote generator (in russian) </span>
+            </div>
+            <div class="project">
+              <span>
+                <a class="project-link" href="https://ad3us.github.io/hazyna/"> Hazyna </a>
+              </span>
+              <span class="details">- Online market. </span>
+            </div>
+          </section>
+        </div>
+      </div>
+    </div>
+    <script src="https://jekyll-cv.stavrospanakakis.com/assets/javascript/toggleDark.js"></script>
+    <script>
+      feather.replace()
+    </script>
+  </body>
 </html>
